tests/snapshots/cli__gen_bin@fn__add.my.snap
---
source: tests/cli.rs
info:
  program: add.my.out
  args: []
input_file: tests/input/fn/add.my
---
success: true
exit_code: 0
----- stdout -----
28

----- stderr -----
