tests/snapshots/cli__gen_bin@fn__print-strs.my.snap
---
source: tests/cli.rs
info:
  program: print-strs.my.out
  args: []
input_file: tests/input/fn/print-strs.my
---
success: true
exit_code: 0
----- stdout -----
hi
world

----- stderr -----
