tests/snapshots/cli__gen_bin@fn__recursive.my.snap
---
source: tests/cli.rs
info:
  program: recursive.my.out
  args: []
input_file: tests/input/fn/recursive.my
---
success: true
exit_code: 0
----- stdout -----
5

----- stderr -----
